[gd_scene load_steps=4 format=3 uid="uid://bfvfnvjqjy84k"]

[ext_resource type="Script" path="res://Functionality/Scripts/arcane_construct.gd" id="1_i8kvs"]
[ext_resource type="Texture2D" uid="uid://c4snuhiqix0ih" path="res://icon.svg" id="2_pcj6y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jrtyj"]
radius = 128.141

[node name="arcane_construct" type="CharacterBody2D"]
script = ExtResource("1_i8kvs")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_pcj6y")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="attackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackRange"]
shape = SubResource("CircleShape2D_jrtyj")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="attackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="attackRange" to="." method="_on_attack_range_body_exited"]
